# gm_pgsqloo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
.github/workflows/: build.yml
cmake/: CMakeLists.txt  download_libpq.cmake
libpq/lib/win64/: libpgcommon.lib  libpgport.lib  libpq.lib
source/: CMakeLists.txt  Connection.cpp  Connection.hpp  Core.cpp  Core.hpp  Factory.hpp  ITask.hpp  Notifier.hpp  PostgreTypes.hpp  Result.cpp  Result.hpp  WeakPtrContainer.hpp  Worker.cpp  Worker.hpp  WorkerData.hpp  async_postgres.hpp  connection.cpp  main.cpp  misc.cpp  notifications.cpp  pgsqloo.hpp  query.cpp  result.cpp  safe_pg.hpp  util.cpp  utils.hpp
source/lua/: LuaBaseObject.hpp  LuaConnection.cpp  LuaConnection.hpp  LuaTask.cpp  LuaTask.hpp
